--- a/setup.cfg
+++ b/setup.cfg
@@ -27,3 +27,7 @@ package_dir =
 
 [options.packages.find]
 where = src
+
+[options.entry_points]
+console_scripts =
+    chembl_downloader = chembl_downloader.cli:main
