Add project outline

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,6 +9,42 @@ description = Download, open, and query ChEMBL through SQLite
 long_description = file: README.md
 long_description_content_type = text/markdown
 
+# URLs associated with the project
+url = https://github.com/cthoyt/chembl_downloader
+download_url = https://github.com/cthoyt/chembl_downloader/releases
+project_urls =
+    Bug Tracker = https://github.com/cthoyt/chembl_downloader/issues
+    Source Code = https://github.com/cthoyt/chembl_downloader
+
+# Author information
+author = Charles Tapley Hoyt
+author_email = cthoyt@gmail.com
+maintainer = Charles Tapley Hoyt
+maintainer_email = cthoyt@gmail.com
+
+# License Information
+license = MIT
+license_file = LICENSE
+
+# Search tags
+classifiers =
+    Development Status :: 4 - Beta
+    Environment :: Console
+    Intended Audience :: Developers
+    Intended Audience :: Science/Research
+    License :: OSI Approved :: MIT License
+    Operating System :: OS Independent
+    Programming Language :: Python
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3 :: Only
+    Topic :: Scientific/Engineering :: Chemistry
+keywords =
+    ChEMBL
+    sqlite
+
 [options]
 install_requires =
     click
