Add query function

--- a/setup.cfg
+++ b/setup.cfg
@@ -64,6 +64,10 @@ package_dir =
 [options.packages.find]
 where = src
 
+[options.extras_require]
+pandas =
+    pandas
+
 [options.entry_points]
 console_scripts =
     chembl_downloader = chembl_downloader.cli:main
