--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,7 @@ envlist =
     manifest
     pyroma
     flake8
-    # mypy
+    mypy
     # documentation linters/checkers
     # doc8
     # readme
