Rename download() function and update docs

--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,7 @@ envlist =
     # code linters/stylers
     manifest
     pyroma
+    lint
     flake8
     mypy
     # documentation linters/checkers
