Apply black, isort, and update docs

--- a/tox.ini
+++ b/tox.ini
@@ -58,10 +58,12 @@ description = Run the flake8 tool with several plugins (bandit, docstrings, impo
 [testenv:lint]
 deps =
     black
+    isort
 skip_install = true
 commands =
     black src/ setup.py
-description = Run black to keep the code looking spiffy
+    isort --profile black src/ setup.py
+description = Run linters to keep the code looking spiffy
 
 [testenv:pyroma]
 deps =
