Reuse pyproject.toml

--- a/tox.ini
+++ b/tox.ini
@@ -62,7 +62,7 @@ deps =
 skip_install = true
 commands =
     black src/ setup.py
-    isort --profile black src/ setup.py
+    isort src/ setup.py
 description = Run linters to keep the code looking spiffy
 
 [testenv:pyroma]
