Cleanup tox configuration

--- a/tox.ini
+++ b/tox.ini
@@ -42,17 +42,17 @@ commands = check-manifest
 skip_install = true
 deps =
     flake8
-    flake8-black
     flake8-bandit
+    flake8-black
+    flake8-bugbear
     flake8-colors
     flake8-docstrings
-    flake8-import-order
-    flake8-bugbear
+    flake8-isort
     flake8-print
     pep8-naming
     pydocstyle
 commands =
-    flake8 src/chembl_downloader/ setup.py
+    flake8 src/chembl_downloader/
 description = Run the flake8 tool with several plugins (bandit, docstrings, import order, pep8 naming).
 
 [testenv:lint]
@@ -61,8 +61,8 @@ deps =
     isort
 skip_install = true
 commands =
-    black src/ setup.py
-    isort src/ setup.py
+    black src/chembl_downloader
+    isort src/chembl_downloader
 description = Run linters to keep the code looking spiffy
 
 [testenv:pyroma]
@@ -134,9 +134,9 @@ deps =
 skip_install = true
 deps =
     wheel
-    setuptools
+    build
 commands =
-    python setup.py -q sdist bdist_wheel
+    python -m build --sdist --wheel --no-isolation
 
 [testenv:release]
 skip_install = true
