--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@
 # Configuring setup()
 [metadata]
 name = chembl_downloader
-version = 0.2.0-dev
+version = 0.2.0
 description = Download, open, and query ChEMBL through SQLite
 long_description = file: README.md
 long_description_content_type = text/markdown
