--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@
 [metadata]
 name = chembl_downloader
 version = 0.2.2-dev
-description = Download, open, and query ChEMBL through SQLite
+description = Reproducibly download, open, parse, and query ChEMBL
 long_description = file: README.md
 long_description_content_type = text/markdown
 
@@ -39,7 +39,6 @@ classifiers =
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.7
-    Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3 :: Only
     Topic :: Scientific/Engineering :: Chemistry
 keywords =
@@ -55,7 +54,7 @@ install_requires =
 
 zip_safe = false
 include_package_data = True
-python_requires = >=3.6
+python_requires = >=3.7
 
 # Where is my code
 packages = find:
@@ -74,3 +73,39 @@ rdkit =
 [options.entry_points]
 console_scripts =
     chembl_downloader = chembl_downloader.cli:main
+
+#########################
+# Flake8 Configuration  #
+# (.flake8)             #
+#########################
+[flake8]
+ignore =
+    S310
+    # line break before binary operator
+    W503
+    # XML stuff
+    S405
+    S314
+    # Whitespace stuff
+    E203
+    # Pickle stuff
+    S301
+    S403
+exclude =
+    .tox,
+    .git,
+    __pycache__,
+    docs/source/conf.py,
+    build,
+    dist,
+    tests/fixtures/*,
+    *.pyc,
+    *.egg-info,
+    .cache,
+    .eggs
+max-complexity = 25
+max-line-length = 120
+import-order-style = pycharm
+application-import-names =
+    chembl_downloader
+    tests
