--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@
 # Configuring setup()
 [metadata]
 name = chembl_downloader
-version = 0.3.0
+version = 0.3.1-dev
 description = Reproducibly download, open, parse, and query ChEMBL
 long_description = file: README.md
 long_description_content_type = text/markdown
