Vendor bioversions code

--- a/setup.cfg
+++ b/setup.cfg
@@ -49,7 +49,6 @@ keywords =
 install_requires =
     click
     more_click
-    bioversions
     pystow
 
 zip_safe = false
@@ -91,6 +90,9 @@ ignore =
     # Pickle stuff
     S301
     S403
+    # FTP
+    S402
+    S321
 exclude =
     .tox,
     .git,
