--- a/tox.ini
+++ b/tox.ini
@@ -52,7 +52,7 @@ deps =
     pep8-naming
     pydocstyle
 commands =
-    flake8 src/chembl_downloader/ setup.py
+    flake8 src/
 description = Run the flake8 tool with several plugins (bandit, docstrings, import order, pep8 naming).
 
 [testenv:lint]
@@ -60,8 +60,9 @@ deps =
     black
 skip_install = true
 commands =
-    black src/ setup.py
-description = Run black to keep the code looking spiffy
+    black src/ notebooks/
+    isort src/ notebooks/
+description = Run linters to keep the code looking spiffy
 
 [testenv:pyroma]
 deps =
