--- a/tox.ini
+++ b/tox.ini
@@ -58,7 +58,7 @@ description = Run the flake8 tool with several plugins (bandit, docstrings, impo
 
 [testenv:lint]
 deps =
-    black
+    black[jupyter]
     isort
 skip_install = true
 commands =
