Add drug indications notebook (#6)

--- a/tox.ini
+++ b/tox.ini
@@ -53,17 +53,17 @@ deps =
     pep8-naming
     pydocstyle
 commands =
-    flake8 src/chembl_downloader/
+    flake8 src/
 description = Run the flake8 tool with several plugins (bandit, docstrings, import order, pep8 naming).
 
 [testenv:lint]
 deps =
-    black
+    black[jupyter]
     isort
 skip_install = true
 commands =
-    black src/chembl_downloader
-    isort src/chembl_downloader
+    black src/ notebooks/
+    isort src/ notebooks/
 description = Run linters to keep the code looking spiffy
 
 [testenv:pyroma]
