Add docs and update config

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -19,6 +19,10 @@ values =
 [bumpverion:part:build]
 values = [0-9A-Za-z-]+
 
+[bumpversion:file:docs/source/conf.py]
+search = release = "{current_version}"
+replace = release = "{new_version}"
+
 [bumpversion:file:setup.cfg]
 search = version = {current_version}
 replace = version = {new_version}
