--- a/setup.cfg
+++ b/setup.cfg
@@ -68,10 +68,52 @@ pandas =
     pandas
 rdkit =
     rdkit-pypi
+tests =
+    pytest
+    coverage
+docs =
+    sphinx
+    sphinx-rtd-theme
+    sphinx-click
+    sphinx-autodoc-typehints
+    sphinx_automodapi
 
 [options.entry_points]
 console_scripts =
     chembl_downloader = chembl_downloader.cli:main
+
+##########################
+# Coverage Configuration #
+# (.coveragerc)          #
+##########################
+[coverage:run]
+branch = True
+source = chembl_downloader
+omit =
+    tests/*
+    docs/*
+
+[coverage:paths]
+source =
+    src/chembl_downloader
+    .tox/*/lib/python*/site-packages/chembl_downloader
+
+[coverage:report]
+show_missing = True
+exclude_lines =
+    pragma: no cover
+    raise NotImplementedError
+    if __name__ == __main__:
+    if TYPE_CHECKING:
+    def __str__
+    def __repr__
+
+##########################
+# Darglint Configuration #
+##########################
+[darglint]
+docstring_style = sphinx
+strictness = short
 
 #########################
 # Flake8 Configuration  #
