--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,12 +1,17 @@
 graft src
 graft tests
+prune scripts
+prune notebooks
+prune tests/.pytest_cache
+
+prune docs/build
+prune docs/source/api
 
 recursive-include docs/source *.py
 recursive-include docs/source *.rst
 recursive-include docs/source *.png
-include docs/Makefile
 
 global-exclude *.py[cod] __pycache__ *.so *.dylib .DS_Store *.gpickle
 
-exclude .bumpversion.cfg Dockerfile docker-compose.yml
-include *.rst *.txt *.yml LICENSE tox.ini .flake8 doc8.ini .coveragerc
+include README.md LICENSE
+exclude tox.ini .flake8 .bumpversion.cfg .readthedocs.yml
