--- a/tox.ini
+++ b/tox.ini
@@ -120,7 +120,7 @@ skip_install = true
 deps =
     docstr-coverage
 commands =
-    docstr-coverage . --skip-private --skip-magic
+    docstr-coverage src/ --skip-private --skip-magic
 description = Run the docstr-coverage tool to check documentation coverage
 
 [testenv:docs]
