Improve documentation build

--- a/.gitignore
+++ b/.gitignore
@@ -409,3 +409,5 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/python,intellij,pycharm,macos,windows,linux,vim
+
+docs/source/api/
