--- a/tox.ini
+++ b/tox.ini
@@ -126,9 +126,8 @@ description = Run the docstr-coverage tool to check documentation coverage
 [testenv:docs]
 description = Build the documentation locally.
 extras =
-    # See the [options.extras_require] entry in setup.cfg for "docs"
     docs
-    # You might need to add additional extras if your documentation covers it
+    pandas
 commands =
     python -m sphinx -W -b html -d docs/build/doctrees docs/source docs/build/html
 
