--- a/tox.ini
+++ b/tox.ini
@@ -54,10 +54,12 @@ commands = coverage erase
 deps =
     black[jupyter]
     isort
+    nbqa
 skip_install = true
 commands =
     black .
     isort .
+    nbqa isort notebooks/
 description = Run linters.
 
 [testenv:doclint]
