--- a/tox.ini
+++ b/tox.ini
@@ -86,7 +86,7 @@ deps =
     flake8-bugbear
     flake8-colors
     flake8-docstrings
-    flake8-isort
+    flake8-isort==5.0.0  # remove when this gets fixed following nov 18/19 releases
     flake8-print
     pep8-naming
     pydocstyle
