--- a/tox.ini
+++ b/tox.ini
@@ -11,23 +11,31 @@ isolated_build = True
 # These environments are run in order if you just use `tox`:
 envlist =
     # always keep coverage-clean first
-    # coverage-clean
-    # code linters/stylers
-    lint
-    manifest
+    coverage-clean
+    # code formatters
+    format
+    # format-docs
+    # Code quality assessment
     pyroma
-    flake8
+    lint
     mypy
-    # documentation linters/checkers
+    # Documentation quality assurance
     doc8
     docstr-coverage
     docs-test
     # the actual tests
     py
+    doctests
     # always keep coverage-report last
-    # coverage-report
+    coverage-report
+
+[testenv:.pkg]
+# this special environment configures the build that tox does itself
+set_env =
+    UV_PREVIEW=1
 
 [testenv]
+description = Run unit and integration tests.
 # Runs on the "tests" directory by default, or passes the positional
 # arguments from `tox -e py <posargs_1> ... <posargs_n>
 commands =
@@ -35,64 +43,71 @@ commands =
     coverage combine
     coverage xml
 extras =
-    # See the [options.extras_require] entry in setup.cfg for "tests"
+    # See the [project.optional-dependencies] entry in pyproject.toml for "tests"
     tests
-    
-[testenv:doctests]
-commands =
-    xdoctest -m src
-deps =
-    xdoctest
-    pygments
+set_env =
+    # this setting gets inherited into all environments, meaning
+    # that things that call uv commands don't require a --preview
+    UV_PREVIEW=1
 
 [testenv:coverage-clean]
+description = Remove testing coverage artifacts.
 deps = coverage
 skip_install = true
 commands = coverage erase
 
-[testenv:lint]
-deps =
-    black[jupyter]
-    isort
-    nbqa
-skip_install = true
+[testenv:doctests]
+description = Test that documentation examples run properly.
 commands =
-    black .
-    isort .
-    nbqa isort notebooks/
-description = Run linters.
+    # note that the package name is required for discovery
+    xdoctest -m src/chembl_downloader
+deps =
+    xdoctest
+    pygments
+    # you might need to add additional deps/extras to make this work for your code
 
-[testenv:doclint]
+[testenv:treon]
+description = Test that notebooks can run to completion
+commands =
+    treon notebooks/
 deps =
-    rstfmt
+    treon
+
+[testenv:format]
+description = Format the code in a deterministic way using ruff. Note that ruff check should come before ruff format when using --fix (ref: https://github.com/astral-sh/ruff-pre-commit/blob/main/README.md)
+deps =
+    ruff
 skip_install = true
 commands =
-    rstfmt docs/source/
+    ruff check --fix
+    ruff format
+
+[testenv:format-docs]
 description = Run documentation linters.
-
-[testenv:manifest]
-deps = check-manifest
+# note that this doesn't work with sphinx-click
+# or any other extension that adds extra directives
+deps =
+    docstrfmt
 skip_install = true
-commands = check-manifest
-description = Check that the MANIFEST.in is written properly and give feedback on how to fix it.
+commands =
+    docstrfmt src/ tests/ docs/ --no-docstring-trailing-line
 
-[testenv:flake8]
+[testenv:format-markdown]
+description = Run markdown formatter.
+skip_install = true
+allowlist_externals =
+    npx
+commands =
+    npx --yes prettier --write --prose-wrap always "**/*.md"
+
+[testenv:lint]
+description = Check code quality using ruff and other tools.
 skip_install = true
 deps =
-    darglint
-    flake8
-    flake8-black
-    flake8-bandit
-    flake8-bugbear
-    flake8-colors
-    flake8-docstrings
-    flake8-isort==5.0.0  # remove when this gets fixed following nov 18/19 releases
-    flake8-print
-    pep8-naming
-    pydocstyle
+    ruff
 commands =
-    flake8 .
-description = Run the flake8 tool with several plugins (bandit, docstrings, import order, pep8 naming). See https://cthoyt.com/2020/04/25/how-to-code-with-me-flake8.html for more information.
+    ruff check
+    ruff format --check
 
 [testenv:pyroma]
 deps =
@@ -103,38 +118,42 @@ commands = pyroma --min=10 .
 description = Run the pyroma tool to check the package friendliness of the project.
 
 [testenv:mypy]
-deps = mypy
-skip_install = true
-commands = mypy --install-types --non-interactive --ignore-missing-imports src/
-description = Run the mypy tool to check static typing on the project.
+description = Run the mypy tool to check static typing on the project. Installs the package to make sure all type stubs get recognized.
+deps =
+    mypy
+    pydantic
+    # You will probably have to add additional type stubs here, especially if you're using tox-uv
+commands = mypy --install-types --non-interactive --ignore-missing-imports --strict src/
 
 [testenv:doc8]
 skip_install = true
 deps =
-    sphinx
     doc8
+extras =
+    docs
 commands =
     doc8 docs/source/
 description = Run the doc8 tool to check the style of the RST files in the project docs.
 
 [testenv:docstr-coverage]
+description = Run the docstr-coverage tool to check documentation coverage.
 skip_install = true
 deps =
     docstr-coverage
 commands =
-    docstr-coverage src/ --skip-private --skip-magic
-description = Run the docstr-coverage tool to check documentation coverage
+    docstr-coverage src/ tests/ --skip-private --skip-magic
 
 [testenv:docs]
-description = Build the documentation locally.
+description = Build the documentation locally, allowing warnings.
 extras =
+    # See the [project.optional-dependencies] entry in pyproject.toml for "docs"
     docs
-    pandas
+    # You might need to add additional extras if your documentation covers it
 commands =
-    python -m sphinx -W -b html -d docs/build/doctrees docs/source docs/build/html
+    python -m sphinx -b html -d docs/build/doctrees docs/source docs/build/html
 
 [testenv:docs-test]
-description = Test building the documentation in an isolated environment.
+description = Test building the documentation in an isolated environment. Warnings are considered as errors via -W.
 changedir = docs
 extras =
     {[testenv:docs]extras}
@@ -142,23 +161,18 @@ commands =
     mkdir -p {envtmpdir}
     cp -r source {envtmpdir}/source
     python -m sphinx -W -b html     -d {envtmpdir}/build/doctrees {envtmpdir}/source {envtmpdir}/build/html
-    python -m sphinx -W -b coverage -d {envtmpdir}/build/doctrees {envtmpdir}/source {envtmpdir}/build/coverage
-    cat {envtmpdir}/build/coverage/c.txt
-    cat {envtmpdir}/build/coverage/python.txt
+    # python -m sphinx -W -b coverage -d {envtmpdir}/build/doctrees {envtmpdir}/source {envtmpdir}/build/coverage
+    # cat {envtmpdir}/build/coverage/c.txt
+    # cat {envtmpdir}/build/coverage/python.txt
 allowlist_externals =
-    /bin/cp
-    /bin/cat
-    /bin/mkdir
-    # for compatibility on GitHub actions
-    /usr/bin/cp
-    /usr/bin/cat
-    /usr/bin/mkdir
+    cp
+    cat
+    mkdir
 
 [testenv:coverage-report]
-deps = coverage
+deps = coverage[toml]
 skip_install = true
 commands =
-    coverage combine
     coverage report
 
 ####################
@@ -166,54 +180,127 @@ commands =
 ####################
 
 [testenv:bumpversion]
-commands = bumpversion {posargs}
+description = Bump the version number
+commands = bump-my-version bump {posargs}
 skip_install = true
 passenv = HOME
 deps =
-    bumpversion
+    bump-my-version
+
+[testenv:bumpversion-release]
+description = Remove the -dev tag from the version
+commands = bump-my-version bump release --tag
+skip_install = true
+passenv = HOME
+deps =
+    bump-my-version
 
 [testenv:build]
 skip_install = true
 deps =
-    wheel
-    build
+    uv
 commands =
-    python -m build --sdist --wheel --no-isolation
+    uv build --sdist --wheel --no-build-isolation
+
+############
+# Releases #
+############
+
+# In order to make a release to PyPI, you'll need to take the following steps:
+#
+# 1. Navigate to https://pypi.org/account/register/ to register for Test PyPI
+# 2. Navigate to https://pypi.org/manage/account/ and request to re-send a verification email.
+#    This is not sent by default, and is required to set up 2-Factor Authentication.
+# 3. Get account recovery codes
+# 4. Set up 2-Factor Authentication
+# 5. Get an API token from https://pypi.org/manage/account/token/
+# 6. Install keyring with `uv tool install keyring`
+# 7. Add your token to keyring with `keyring set https://upload.pypi.org/legacy/ __token__`
 
 [testenv:release]
-description = Release the code to PyPI so users can pip install it
+description = Release the code to PyPI so users can pip install it, using credentials from keyring
 skip_install = true
 deps =
     {[testenv:build]deps}
-    twine >= 1.5.0
+    uv
+    keyring
 commands =
     {[testenv:build]commands}
-    twine upload --skip-existing dist/*
+    uv publish --username __token__ --keyring-provider subprocess --publish-url https://upload.pypi.org/legacy/
+
+[testenv:release-via-env]
+description = Release the code to PyPI so users can pip install it, using credentials from the environment.
+skip_install = true
+deps =
+    {[testenv:build]deps}
+    uv
+commands =
+    {[testenv:build]commands}
+    uv publish --publish-url https://upload.pypi.org/legacy/
+passenv =
+    UV_PUBLISH_USERNAME
+    UV_PUBLISH_PASSWORD
+
+[testenv:finish]
+description =
+    Run a workflow that removes -dev from the version, creates a tagged release on GitHub,
+    creates a release on PyPI, and bumps the version again.
+skip_install = true
+passenv =
+    HOME
+deps =
+    {[testenv:release]deps}
+    bump-my-version
+commands =
+    {[testenv:bumpversion-release]commands}
+    {[testenv:release]commands}
+    git push --tags
+    bump-my-version bump patch
+    git push
+allowlist_externals =
+    git
+
+#################
+# Test Releases #
+#################
+
+# In order to test making a release to Test PyPI, you'll need to take the following steps:
+#
+# 1. Navigate to https://test.pypi.org/account/register/ to register for Test PyPI
+# 2. Navigate to https://test.pypi.org/manage/account/ and request to re-send a verification email.
+#    This is not sent by default, and is required to set up 2-Factor Authentication.
+# 3. Get account recovery codes
+# 4. Set up 2-Factor Authentication
+# 5. Get an API token from https://test.pypi.org/manage/account/token/
+# 6. Install keyring with `uv tool install keyring`
+# 7. Add your token to keyring with `keyring set https://test.pypi.org/legacy/ __token__`
 
 [testenv:testrelease]
 description = Release the code to the test PyPI site
 skip_install = true
 deps =
     {[testenv:build]deps}
-    twine >= 1.5.0
+    uv
+    keyring
 commands =
     {[testenv:build]commands}
-    twine upload --skip-existing --repository-url https://test.pypi.org/simple/ dist/*
+    uv publish --username __token__ --keyring-provider subprocess --publish-url https://test.pypi.org/legacy/
 
-[testenv:finish]
+[testenv:testfinish]
+description =
+    Run a workflow that removes -dev from the version, creates a tagged release on GitHub,
+    creates a release on Test PyPI, and bumps the version again.
 skip_install = true
 passenv =
     HOME
-    TWINE_USERNAME
-    TWINE_PASSWORD
 deps =
-    {[testenv:release]deps}
-    bump2version
+    {[testenv:testrelease]deps}
+    bump-my-version
 commands =
-    bump2version release --tag
-    {[testenv:release]commands}
+    {[testenv:bumpversion-release]commands}
+    {[testenv:testrelease]commands}
     git push --tags
-    bump2version patch
+    bump-my-version bump patch
     git push
 allowlist_externals =
-    /usr/bin/git
+    git
