--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -4,16 +4,25 @@
 
 version: 2
 
+sphinx:
+  # Path to your Sphinx configuration file, required as of
+  # https://about.readthedocs.com/blog/2024/12/deprecate-config-files-without-sphinx-or-mkdocs-config/
+  configuration: docs/source/conf.py
+
 # Set the version of Python and other tools you might need
 build:
-  os: ubuntu-20.04
+  os: ubuntu-22.04
+  apt_packages:
+    - graphviz
   tools:
-    python: "3.9"
+    python: "3.12"
 
-python:
-  install:
-    - method: pip
-      path: .
-      extra_requirements:
-        - docs
-        - pandas
+  # adapted from uv recipe at https://docs.readthedocs.io/en/stable/build-customization.html#install-dependencies-with-uv
+  # and comment at https://github.com/readthedocs/readthedocs.org/issues/11289#issuecomment-2103832834
+  commands:
+    - asdf plugin add uv
+    - asdf install uv latest
+    - asdf global uv latest
+    - uv venv $READTHEDOCS_VIRTUALENV_PATH
+    - VIRTUAL_ENV=$READTHEDOCS_VIRTUALENV_PATH UV_PREVIEW=1 uv pip install .[docs]
+    - python -m sphinx -T -b html -d docs/_build/doctrees -D language=en docs/source $READTHEDOCS_OUTPUT/html
