Clean up typing

--- a/tox.ini
+++ b/tox.ini
@@ -121,9 +121,8 @@ description = Run the pyroma tool to check the package friendliness of the proje
 description = Run the mypy tool to check static typing on the project. Installs the package to make sure all type stubs get recognized.
 deps =
     mypy
-    pydantic
-    # You will probably have to add additional type stubs here, especially if you're using tox-uv
-commands = mypy --install-types --non-interactive --ignore-missing-imports --strict src/
+    types-tabulate
+commands = mypy --ignore-missing-imports --strict src/
 
 [testenv:doc8]
 skip_install = true
