--- a/tox.ini
+++ b/tox.ini
@@ -122,7 +122,7 @@ description = Run the mypy tool to check static typing on the project. Installs 
 deps =
     mypy
     types-tabulate
-commands = mypy --ignore-missing-imports --strict src/
+commands = mypy --ignore-missing-imports --strict src/ tests/
 
 [testenv:doc8]
 skip_install = true
