--- a/.gitignore
+++ b/.gitignore
@@ -899,3 +899,14 @@ FodyWeavers.xsd
 # End of https://www.toptal.com/developers/gitignore/api/macos,linux,windows,python,jupyternotebooks,jetbrains,pycharm,vim,emacs,visualstudiocode,visualstudio
 
 scratch/
+
+# JOSS manuscript-related
+paper/paper.pdf
+/paper/jats
+paper/paper.crossref
+paper/paper.preprint.aux
+paper/paper.preprint.fls
+paper/paper.preprint.pdf
+paper/paper.preprint.tex
+paper/paper.preprint.fdb_latexmk
+paper/paper.bib.blg
