--- a/tox.ini
+++ b/tox.ini
@@ -69,7 +69,12 @@ deps =
 [testenv:treon]
 description = Test that notebooks can run to completion
 commands =
-    treon notebooks/
+    treon notebooks/chebi-mappings.ipynb
+    # treon notebooks/drug-indications.ipynb
+    # treon notebooks/refresh-static-data.ipynb
+    # treon notebooks/cortes-ciriano-refresh.ipynb
+extras =
+    notebooks
 deps =
     treon
 
