--- a/tox.ini
+++ b/tox.ini
@@ -71,8 +71,8 @@ description = Test that notebooks can run to completion
 commands =
     treon notebooks/chebi-mappings.ipynb
     # treon notebooks/drug-indications.ipynb
-    # treon notebooks/refresh-static-data.ipynb
-    # treon notebooks/cortes-ciriano-refresh.ipynb
+    treon notebooks/refresh-static-data.ipynb
+    treon notebooks/cortes-ciriano-refresh.ipynb
 extras =
     notebooks
 deps =
